2016-10-29 21:33 UTC+0200 Viktor Szakats (vszakats users.noreply.github.com)   * contrib/hbdoc/hbdoc.css     ! fix menu positioning on mobile screens

--- a/contrib/hbdoc/hbdoc.css
+++ b/contrib/hbdoc/hbdoc.css
@@ -392,4 +392,9 @@ p {
     margin: 0 15px;
     width: auto;
   }
+
+  .dropdown-content {
+    position: absolute;
+    right: 4px;
+  }
 }
